--- a/package.json
+++ b/package.json
@@ -6,9 +6,13 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "prettier": "npx prettier --write --log-level silent .",
+    "tsc": "tsc --project tsconfig.json",
+    "check": "npm run prettier && npm run tsc"
   },
   "devDependencies": {
+    "prettier": "3.0.0",
     "typescript": "^5.0.2",
     "vite": "^4.4.5"
   }
